# Nourish

./: .gitignore  README.md  auth.py  main.py  pyproject.toml
data/: Indian_Food_Nutrition.csv
notebook/: EDA.ipynb
notebook/data/: Anuvaad_INDB.csv  main_df.csv
src/backend/: database.py  models.py  schemas.py
src/backend/app/: main.py
src/backend/app/api/: auth.py  dietician.py  dietician_auth.py  meals.py  plans.py  profile.py  recipes.py  routes.py
src/backend/app/core/: config.py
src/backend/app/models/: schemas.py
src/backend/app/services/: ai_recipe.py  ai_recipe_store.py  auth.py  clinical_math.py  data_loader.py  dietician_auth.py  dietician_store.py  patient_profile_store.py  permissions.py  recommendation.py
src/backend/data/: db.py  ifct.db  models.py  tagged_recipes.csv
src/frontend/: app.js  index.html  package-lock.json  package.json  profile.html  style.css  vite.config.ts
src/frontend/src/: App.tsx  index.css  main.tsx
src/frontend/src/app/providers/: AppProviders.tsx
src/frontend/src/app/router/: AppRouter.tsx  ProtectedRoute.tsx
src/frontend/src/features/auth/: AuthPage.tsx  schemas.ts
src/frontend/src/features/dashboard/: AiKitchenDialog.tsx  DashboardPage.tsx  DieticianDashboard.tsx  RecipeHistoryPanel.tsx
src/frontend/src/features/plan/: PlanResults.tsx
src/frontend/src/features/profile/: schemas.ts
src/frontend/src/shared/api/: client.ts
src/frontend/src/shared/config/: env.ts
src/frontend/src/shared/lib/: auth.ts  http.ts
src/frontend/src/shared/types/: api.ts
src/frontend/src/theme/: theme.ts
(+1 files in other folders)
